# otvi

./: .dockerignore  .env.example  .gitguardian.yml  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.no-frontend  LICENSE  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  codecov.yml  deny.toml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  docs-issue.yml  feature-request.yml
.github/workflows/: ci.yml  docker-build.yml  docker-publish.yml  docs-deploy.yml  pre-release.yml  release-server.yml
crates/otvi-core/: Cargo.toml
crates/otvi-core/src/: config.rs  lib.rs  template.rs  types.rs
crates/otvi-server/: Cargo.toml  build.rs
crates/otvi-server/migrations/: 0001_init.sql  0002_must_change_password.sql
crates/otvi-server/src/: auth_middleware.rs  db.rs  embedded_frontend.rs  error.rs  lib.rs  main.rs  provider_client.rs  state.rs  watcher.rs
crates/otvi-server/src/api/: admin.rs  auth.rs  channels.rs  mod.rs  provider_access.rs  providers.rs  proxy.rs  user_auth.rs
crates/otvi-server/tests/: integration.rs
crates/otvi-server/tests/fixtures/: httpbin-provider.yaml
docs/: README.md  docusaurus.config.ts  package-lock.json  package.json  sidebars.ts
docs/blog/: 2026-03-14-versioned-docs-and-release-posts.md  authors.yml  tags.yml
docs/docs/: admin-guide.md  architecture.md  configuration.md  deployment.md  frontend.md  getting-started.md  introduction.md
docs/docs/api-reference/: admin.md  authentication.md  channels.md  overview.md  providers.md  user-management.md
docs/docs/providers/: authentication.md  channels.md  overview.md  playback-and-drm.md  stream-proxy.md  template-engine.md  yaml-schema.md
docs/src/pages/: index.module.css  index.tsx
docs/versioned_docs/version-0.1.0/: architecture.md  frontend.md  introduction.md
docs/versioned_docs/version-0.1.0/api-reference/: streaming.md  user-management.md
docs/versioned_docs/version-0.1.0/providers/: authentication.md  template-engine.md
docs/versioned_sidebars/: version-0.1.0-sidebars.json
openspec/: config.yaml
openspec/changes/add-leptos-frontend-ui-tests/: design.md  proposal.md  tasks.md
openspec/changes/add-leptos-frontend-ui-tests/specs/coherent-channel-and-playback-flow/: spec.md
openspec/changes/archive/2026-03-14-harden-and-rationalize-platform/: design.md  proposal.md
openspec/changes/archive/2026-03-14-harden-and-rationalize-platform/specs/aligned-runtime-contracts/: spec.md
openspec/changes/archive/2026-03-14-harden-and-rationalize-platform/specs/coherent-channel-and-playback-flow/: spec.md
openspec/changes/archive/2026-03-14-harden-and-rationalize-platform/specs/secure-provider-boundaries/: spec.md
openspec/changes/archive/2026-03-15-add-leptos-frontend-ui-tests/: tasks.md
openspec/changes/archive/2026-03-15-add-leptos-frontend-ui-tests/specs/leptos-frontend-ui-tests/: spec.md
openspec/changes/archive/2026-03-15-add-versioned-docs-and-release-blog/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-15-repo-governance-and-release-train/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-15-repo-governance-and-release-train/specs/branch-based-release-governance/: spec.md
openspec/changes/archive/2026-03-15-repo-governance-and-release-train/specs/repository-community-health/: spec.md
openspec/changes/archive/2026-03-15-repo-governance-and-release-train/specs/tag-driven-server-release/: spec.md
openspec/changes/archive/2026-03-15-repo-governance-and-release-train/specs/versioned-documentation-site/: spec.md
openspec/changes/archive/2026-03-15-speed-up-docker-publish-builds/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-15-speed-up-docker-publish-builds/specs/efficient-docker-publish/: spec.md
openspec/changes/archive/2026-03-15-support-all-major-arch-platforms-in-docker-image-publish-workflow/: design.md  tasks.md
openspec/changes/archive/2026-03-15-support-all-major-arch-platforms-in-docker-image-publish-workflow/specs/multi-arch-docker-publish/: spec.md
openspec/changes/archive/2026-03-15-update-release-binaries-workflow-to-support-all-major-platforms/: design.md  proposal.md
openspec/changes/archive/2026-03-16-implement-auth-refresh/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-03-16-implement-auth-refresh/specs/coherent-channel-and-playback-flow/: spec.md
openspec/changes/fix-jiotv-key-auth-and-drm/: design.md  proposal.md  tasks.md
openspec/changes/fix-jiotv-key-auth-and-drm/specs/coherent-channel-and-playback-flow/: spec.md
openspec/changes/fix-jiotv-key-auth-and-drm/specs/dash-manifest-proxy/: spec.md
openspec/changes/fix-jiotv-key-auth-and-drm/specs/drm-license-proxy/: spec.md
openspec/changes/fix-jiotv-key-auth-and-drm/specs/secure-provider-boundaries/: spec.md
openspec/changes/harden-and-rationalize-platform/: tasks.md
openspec/changes/support-all-major-arch-platforms-in-docker-image-publish-workflow/: proposal.md
openspec/changes/update-release-binaries-workflow-to-support-all-major-platforms/: tasks.md
openspec/changes/update-release-binaries-workflow-to-support-all-major-platforms/specs/tag-driven-server-release/: spec.md
openspec/specs/aligned-runtime-contracts/: spec.md
openspec/specs/coherent-channel-and-playback-flow/: spec.md
openspec/specs/repository-community-health/: spec.md
openspec/specs/secure-provider-boundaries/: spec.md
openspec/specs/tag-driven-server-release/: spec.md
openspec/specs/versioned-documentation-site/: spec.md
providers/: demo-provider.yaml  example.yaml  jiotv-mobile.yaml
scripts/: install-hooks.sh  integration-test.sh
src/: main.rs
web/: Cargo.toml  Trunk.toml  index.html  input.css  package.json  style.css  webdriver.json
web/src/: api.rs  app.rs  lib.rs  main.rs  ui_test.rs
web/src/pages/: admin.rs  app_login.rs  change_password.rs  channels.rs  home.rs  login.rs  mod.rs  not_found.rs  player.rs  setup.rs
(+3 files in other folders)
