[workspace]
resolver = "2"
members = ["crates/otvi-core", "crates/otvi-server", "web"]
default-members = ["crates/otvi-core", "crates/otvi-server"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# ── Optimized release profile ─────────────────────────────────────────────────
# Applied when building with `cargo build --release` or `trunk build --release`.
#
# lto = "thin"          – link-time optimisation across crate boundaries.
#                         "thin" gives most of the benefit at a fraction of the
#                         compile time of "fat".
# codegen-units = 1     – disable parallel code generation; allows LLVM to
#                         perform more aggressive inlining and dead-code removal.
# opt-level = 3         – maximum LLVM optimisation level (default for release).
# strip = "symbols"     – remove debug symbols from the final binary / WASM
#                         blob, significantly reducing binary size.
# panic = "abort"       – replace stack-unwinding panic machinery with a simple
#                         abort; reduces binary size and is appropriate for a
#                         server that restarts on crash.
[profile.release]
lto           = "thin"
codegen-units = 1
opt-level     = 3
strip         = "symbols"
panic         = "abort"

# ── WASM-specific release profile ────────────────────────────────────────────
# Trunk uses the "release" profile for `trunk build --release`.  The settings
# above also apply to the WASM target; `opt-level = "s"` (size) can further
# shrink the .wasm blob at the cost of some runtime performance — override here
# if bundle size is more important than speed.
#
# Uncomment to prefer size over speed for the WASM frontend:
# [profile.release.package.otvi-web]
# opt-level = "s"
