[package]
name = "otvi-web"
version = "0.1.0"
edition = "2024"

[dependencies]
otvi-core = { path = "../crates/otvi-core" }

leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }

serde = { workspace = true }
serde_json = { workspace = true }

gloo-net = "0.6"
gloo-storage = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["HtmlVideoElement", "HtmlInputElement", "Window"] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
