[package]
name = "otvi-web"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"

[features]
default = []
ui-test = ["dep:wasm-bindgen-test"]

[dependencies]
otvi-core = { path = "../crates/otvi-core" }

leptos = { version = "0.8", features = ["csr"] }
leptos_router = { version = "0.8" }

serde = { workspace = true }
serde_json = { workspace = true }
futures = "0.3"

gloo-net = "0.7"
urlencoding = "2"
gloo-storage = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "History",
    "HtmlElement",
    "Location",
    "HtmlVideoElement",
    "HtmlInputElement",
    "Storage",
    "Window",
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
wasm-bindgen-test = { version = "0.3", optional = true }
