[package]
name = "otvi-core"
version = "0.1.0"
edition = "2024"
license = "CC-BY-NC-SA-4.0"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
jsonpath-rust = "1.0"
schemars = { version = "1.2" }
utoipa = { version = "5", features = ["uuid"] }

[dev-dependencies]
serde_yaml_ng = "0.10"
