[package]
name = "otvi-server"
version = "0.1.0"
edition = "2024"

[dependencies]
otvi-core = { path = "../otvi-core" }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"

axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "cookies"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
rand = "0.9"
url = "2"
urlencoding = "2"

# Database – AnyPool lets the driver be chosen at runtime via DATABASE_URL.
# Supported schemes: sqlite://, postgres://, mysql://
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "any",
    "sqlite",
    "postgres",
    "mysql",
    "uuid",
    "migrate",
] }

# .env file loading
dotenvy = "0.15"

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = "9"

# Time
chrono = { version = "0.4", features = ["serde"] }
