[package]
name = "otvi-server"
version = "0.1.0"
edition = "2024"
license = "CC-BY-NC-SA-4.0"

[dependencies]
otvi-core = { path = "../otvi-core" }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = "0.10"

axum = { version = "0.8", features = ["macros"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "cookies", "query", "form"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "fs"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
anyhow = "1"
base64 = "0.22"
mime_guess = "2"
rand = "0.10"
url = "2"
urlencoding = "2"

# Database – AnyPool lets the driver be chosen at runtime via DATABASE_URL.
# Supported schemes: sqlite://, postgres://, mysql://
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "any",
    "sqlite",
    "postgres",
    "mysql",
    "uuid",
    "migrate",
] }

# .env file loading
dotenvy = "0.15"

# Password hashing
argon2 = "0.5"

# JWT
jsonwebtoken = { version = "10", features = ["rust_crypto"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Rate limiting
tower_governor = { version = "0.8", features = ["axum"] }

# In-memory TTL cache (channel list / categories)
moka = { version = "0.12", features = ["future"] }

# File-system watcher (hot-reload provider configs)
notify = { version = "8.2" }

# OpenAPI / Swagger
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "9", features = ["axum"] }

# JSON Schema generation (for provider YAML schema export)
schemars = { version = "1.2" }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
wiremock = "0.6"
